--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<head>	
+<head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -152,23 +152,17 @@
 			margin: 0.5rem 0;
 		}
 
-		nav {
-			position: relative;
-			display: flex;
-			gap: 1em;
-			padding: 1em;
-			background: var(--bg-2);
-			z-index: 2;
-			margin: 0 0 1em 0;
-			border-radius: var(--border-radius);
-		}
-
-		nav a {
+		footer a {
+			color: var(--link);
 			text-decoration: none;
 		}
 
-		nav a[aria-current='true'] {
-			border-bottom: 2px solid;
+		footer a:hover {
+			color: var(--link-hover);
+		}
+
+		footer p {
+			margin: 0;
 		}
 
 		ul:has(form) {
@@ -254,17 +248,76 @@
 			--link-hover: hsl(206, 96%, 78%);
 			--link-active: hsl(206, 96%, 64%);
 		}
+
+		nav {
+			position: relative;
+			display: flex;
+			flex-direction: column;
+			padding: 1em;
+			background: var(--bg-2);
+			z-index: 2;
+			margin: 0 0 1em 0;
+			border-radius: var(--border-radius);
+		}
+
+		.menu-toggle {
+			display: none;
+			cursor: pointer;
+			background: transparent;
+			border: none;
+			font-size: 1.5em;
+		}
+
+		.nav-links {
+			display: flex;
+			flex-direction: row;
+			gap: 1em;
+		}
+
+		nav a {
+			text-decoration: none;
+		}
+
+		nav a[aria-current='true'] {
+			border-bottom: 2px solid;
+		}
+
+		/* Small screens: hide menu and show toggle button */
+		@media (max-width: 768px) {
+			.nav-links {
+				display: none;
+				flex-direction: column;
+				width: 100%;
+			}
+
+			.menu-toggle {
+				display: block;
+			}
+
+			nav.open .nav-links {
+				display: flex;
+			}
+		}
 	</style>
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div style="display: contents">%sveltekit.body%</div>
 
+	<div class="footer-content">
+		<p>&copy; <span id="year"></span> txtwizard. All rights reserved.</p>
+	</div>
 	<script>
 		const theme = new URL(window.location).searchParams.get('theme');
 
 		document.body.classList.remove('light', 'dark');
 		document.body.classList.add(theme || 'light');
+		document.getElementById('year').textContent = new Date().getFullYear();
+
+		document.querySelector('.menu-toggle').addEventListener('click', function () {
+			const nav = document.querySelector('nav');
+			nav.classList.toggle('open');
+		});
 	</script>
 </body>
 
